add the accent to resume in cv sections

--- a/public/index.html
+++ b/public/index.html
@@ -691,11 +691,11 @@
 <div class="row">
   
     <div class="col-12 col-lg-4 section-heading">
-      <h1>Resume</h1>
+      <h1>Resumé</h1>
       
     </div>
     <div class="col-12 col-lg-8">
-      <p>My resume is available for download in 
+      <p>My resumé is available for download in 
 <a href="cv/Reusswig_Resume.pdf">PDF</a> form.</p>
 
     </div>
