--- a/public/404.html
+++ b/public/404.html
@@ -377,7 +377,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#cv"><span>Resume</span></a>
+          <a class="nav-link " href="/#cv"><span>Resumé</span></a>
         </li>
 
         
