--- a/public/courses/example/example1/index.html
+++ b/public/courses/example/example1/index.html
@@ -384,7 +384,7 @@ Tip 1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis posuere tell
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#cv"><span>Resume</span></a>
+          <a class="nav-link " href="/#cv"><span>Resumé</span></a>
         </li>
 
         
