--- a/public/index.html
+++ b/public/index.html
@@ -387,7 +387,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#cv" data-target="#cv"><span>Resume</span></a>
+          <a class="nav-link " href="/#cv" data-target="#cv"><span>Resumé</span></a>
         </li>
 
         
