--- a/public/publication/low-flow-handbook/index.html
+++ b/public/publication/low-flow-handbook/index.html
@@ -426,7 +426,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#cv"><span>Resume</span></a>
+          <a class="nav-link " href="/#cv"><span>Resumé</span></a>
         </li>
 
         
