--- a/public/terms/index.html
+++ b/public/terms/index.html
@@ -382,7 +382,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#cv"><span>Resume</span></a>
+          <a class="nav-link " href="/#cv"><span>Resumé</span></a>
         </li>
 
         
