--- a/public/404.html
+++ b/public/404.html
@@ -406,7 +406,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#featured"><span>Reports & Articles</span></a>
+          <a class="nav-link " href="/#publications"><span>Reports & Articles</span></a>
         </li>
 
         
