--- a/public/courses/example/example1/index.html
+++ b/public/courses/example/example1/index.html
@@ -413,7 +413,7 @@ Tip 1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis posuere tell
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#featured"><span>Reports & Articles</span></a>
+          <a class="nav-link " href="/#publications"><span>Reports & Articles</span></a>
         </li>
 
         
