--- a/public/publication/low-flow-handbook/index.html
+++ b/public/publication/low-flow-handbook/index.html
@@ -455,7 +455,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#featured"><span>Reports & Articles</span></a>
+          <a class="nav-link " href="/#publications"><span>Reports & Articles</span></a>
         </li>
 
         
